--- a/frontend/blood-donation-camp/src/app/Components/addblooddonationcamp/addblooddonationcamp.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/addblooddonationcamp/addblooddonationcamp.component.html
@@ -1,10 +1,7 @@
 <header><h1> Add Blood Donation Camp Details </h1></header>
 <div>
   <table>
-    <tr>
-      <td id="textele" >Blood Donation Camp Id</td>
-      <td><input type="text" name="" id="" [(ngModel)]="blooddonationcamp.bloodDonationCampID"></td>
-    </tr>
+
 
     <tr>
       <td id="textele">Camp Name</td>
@@ -42,4 +39,5 @@
     </tr>
 
   </table>
+  <button><a routerLink="/blooddonationcampmenu">back</a></button>
 </div>
