--- a/frontend/blood-donation-camp/src/app/Components/addblooddonordetails/addblooddonordetails.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/addblooddonordetails/addblooddonordetails.component.html
@@ -1,10 +1,7 @@
 <header><h1>Add Blood Donor</h1></header>
 <div>
     <table>
-      <tr>
-        <td id="textele">Blood donor id</td>
-        <td><input type="number" name="" id="" [(ngModel)]="blooddonor.bloodDonorID"></td>
-      </tr>
+
       <tr>
         <td id="textele">Name</td>
         <td><input type="text" name="" id="" [(ngModel)]="blooddonor.firstName"></td>
@@ -36,5 +33,7 @@
 
         </td>
       </tr>
+
     </table>
+    <button><a routerLink="/blooddonormenu">back</a></button>
   </div>
