--- a/frontend/blood-donation-camp/src/app/Components/addblooddonordonation/addblooddonordonation.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/addblooddonordonation/addblooddonordonation.component.html
@@ -2,10 +2,7 @@
 <br>
 <div>
     <table>
-      <tr>
-        <td id="bid">Blood donation ID</td>
-        <td><input type="number" name="" id="" [(ngModel)]="blooddonordonation.bloodDonationID"></td>
-      </tr>
+
       <br>
       <tr>
         <td id="ui">Blood Donation Date</td>
@@ -50,4 +47,5 @@
         </td>
       </tr>
     </table>
+    <button><a routerLink="/blooddonormenu">back</a></button>
   </div>
