--- a/frontend/blood-donation-camp/src/app/Components/getblooddonordetails/getblooddonordetails.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/getblooddonordetails/getblooddonordetails.component.html
@@ -21,4 +21,5 @@
         <td><button (click)="RemoveBloodDonor(item.bloodDonorID)">Delete</button></td>
       </tr>
     </table>
+    <button><a routerLink="/blooddonormenu">back</a></button>
   </div>
