--- a/frontend/blood-donation-camp/src/app/Components/gethospitaldetails/gethospitaldetails.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/gethospitaldetails/gethospitaldetails.component.html
@@ -14,8 +14,12 @@
           <td>{{item.city}}</td>
           <td>{{item.contactNo}}</td>
           <td><button (click)="DeleteHospitalDetails(item.hospitalID)">Delete</button></td>
+
       </tr>
 
 
+
   </table>
+  <button><a routerLink="/hospitalmenu">back</a></button>
 </div>
+
