--- a/frontend/blood-donation-camp/src/app/Components/updatehospital/updatehospital.component.html
+++ b/frontend/blood-donation-camp/src/app/Components/updatehospital/updatehospital.component.html
@@ -33,6 +33,7 @@
         <button id="btn" (click)="UpdateHospital()">Update</button>
 
       </td>
+      <td><button><a routerLink="/hospitalmenu">back</a></button></td>
     </tr>
   </table>
 </div>
